...
    Row(modifier = Modifier.fillMaxWidth(), horizontalArrangement = Arrangement.SpaceBetween) {
      if (pagerState.currentPage > 0) {
        Button(
            onClick = {
              coroutineScope.launch { pagerState.animateScrollToPage(pagerState.currentPage - 1) }
            },
            modifier = Modifier.testTag("previous_button")) {
              Text(stringResource(id = R.string.event_creation_screen_previous))
            }
      } else {
        Spacer(modifier = Modifier.width(ButtonDefaults.MinWidth))
      }
      if (pagerState.currentPage < 3) {
        Button(
            onClick = {
              coroutineScope.launch { pagerState.animateScrollToPage(pagerState.currentPage + 1) }
            },
            modifier = Modifier.testTag("next_button")) {
              Text(stringResource(id = R.string.event_creation_screen_next))
            }
      } else {
        Button(
            onClick = {
              if (!uiState.loading) {
...
                              Toast.LENGTH_SHORT)
                          .show()
                      navObject.goBack()
                    })
              }
            },
            modifier = Modifier.testTag("create_event_button")) {
              Text(stringResource(id = R.string.event_creation_screen_create_event))
            }
      }
    }
  }
}
...
    LocationSelector(uiState.location, eventViewModel::updateEventLocation)

    Spacer(modifier = Modifier.height(16.dp))
    Legend(
        stringResource(id = R.string.event_creation_screen_title_legend),
        Icons.Rounded.Title,
        "Title")
    Spacer(Modifier.height(16.dp))
    OutlinedTextField(
        value = uiState.title,
        onValueChange = eventViewModel::updateEventTitle,
        label = { Text(stringResource(id = R.string.event_creation_screen_title)) },
        modifier = Modifier.fillMaxWidth().testTag("add_a_title"))

    Spacer(modifier = Modifier.height(16.dp))

    Legend(
        stringResource(id = R.string.event_creation_screen_description_legend),
        Icons.Rounded.Description,
        "Description")

    Spacer(modifier = Modifier.height(16.dp))

    OutlinedTextField(
        value = uiState.description,
        onValueChange = eventViewModel::updateEventDescription,
...
        stringResource(id = R.string.event_creation_screen_tags_legend), Icons.Rounded.Tag, "Tags")

    TagField(
        uiState.tags,
        eventViewModel::updateEventTags,
        { tagFieldActive = it },
        Modifier.fillMaxWidth().testTag("tag_field"))

    Spacer(modifier = Modifier.height(16.dp))

    Legend(
        stringResource(id = R.string.event_creation_screen_public_legend),
        Icons.Rounded.Public,
...
  val uiState by eventViewModel.uiState.collectAsState()

  Column(modifier = Modifier.padding(16.dp)) {
    Text(
        stringResource(id = R.string.event_creation_screen_groceries),
        style = MaterialTheme.typography.headlineSmall,
        modifier = Modifier.testTag("groceries_title"))
    Spacer(modifier = Modifier.height(16.dp))

    val showAddDialog = remember { mutableStateOf(false) }
    Button(
        onClick = { showAddDialog.value = true },
        modifier = Modifier.testTag("add_groceries_button")) {
          Text(stringResource(id = R.string.event_creation_screen_add_groceries))
        }

    if (showAddDialog.value) {

      SupplyPopup(
...
  var parkingText by remember { mutableStateOf("") }
  var bedsText by remember { mutableStateOf("") }
  Column(modifier = Modifier.padding(16.dp)) {
    Text(
        stringResource(id = R.string.event_creation_screen_logistics),
        style = MaterialTheme.typography.headlineSmall,
        modifier = Modifier.testTag("logistics_title"))
    Spacer(modifier = Modifier.height(16.dp))
    Text(
        stringResource(id = R.string.event_creation_screen_parking),
        style = MaterialTheme.typography.bodyMedium,
        modifier = Modifier.testTag("parking_title"))
    OutlinedTextField(
        value = parkingText,
        onValueChange = {
          parkingText = it
          try {
            eventViewModel.updateParkingSpaces(parkingText.toInt())
          } catch (_: Exception) {
            eventViewModel.updateParkingSpaces(0)
          }
        },
        label = { Text(stringResource(id = R.string.event_creation_screen_number_parking)) },
        keyboardOptions = KeyboardOptions(keyboardType = KeyboardType.Number),
        modifier = Modifier.fillMaxWidth().testTag("n_parking"))

    Spacer(modifier = Modifier.height(16.dp))
    Text(
        stringResource(id = R.string.event_creation_screen_beds),
        style = MaterialTheme.typography.bodyMedium,
        modifier = Modifier.testTag("beds_title"))
    OutlinedTextField(
        value = bedsText,
        onValueChange = {
          bedsText = it
          try {
            eventViewModel.updateBeds(bedsText.toInt())
          } catch (_: Exception) {
            eventViewModel.updateBeds(0)
          }
        },
        label = { Text(stringResource(id = R.string.event_creation_screen_number_beds)) },
        keyboardOptions = KeyboardOptions(keyboardType = KeyboardType.Number),
        modifier = Modifier.fillMaxWidth().testTag("n_beds"))
  }
}

