<resources>
    <string name="app_name">Chimpagne</string>
    <string name="homescreen_my_events">MY EVENTS</string>
    <string name="homescreen_join_event">DISCOVER EVENTS</string>
    <string name="homescreen_organize_event">ORGANIZE AN EVENT</string>
    <string name="homescreen_open_my_events_toast">"Opening"</string>
    <string name="account_creation_screen_create_account">Create your Account</string>
    <string name="account_creation_screen_first_name">First Name</string>
    <string name="account_creation_screen_last_name">Last Name</string>
    <string name="account_creation_screen_city">Choose your City</string>
    <string name="account_creation_screen_language">Language</string>
    <string name="account_creation_screen_button">Create Account</string>
    <string name="event_creation_screen_name">Create An Event</string>
    <string name="event_creation_screen_previous">Previous</string>
    <string name="event_creation_screen_next">Next</string>
    <string name="event_creation_screen_create_event">Create Event</string>
    <string name="event_creation_screen_toast_creating">Creating the event…</string>
    <string name="event_creation_screen_toast_finish">Event has been created successfully!</string>
    <string name="event_creation_screen_toast_failed">Event creation failed !</string>
    <string name="event_creation_screen_title">Create an event</string>
    <string name="event_creation_screen_title_legend">Title</string>
    <string name="event_creation_screen_description">Add a description</string>
    <string name="event_creation_screen_description_legend">Description</string>
    <string name="event_creation_screen_location_legend">Location</string>
    <string name="event_creation_screen_start_date_legend">Event Start Date and Time</string>
    <string name="event_creation_screen_end_date_legend">Event End Date and Time</string>
    <string name="event_creation_screen_tags_legend">Add Event Tags</string>
    <string name="event_creation_screen_event_made_public">This event has been made public !</string>
    <string name="event_creation_screen_make_event_public">Make this event public</string>
    <string name="event_creation_screen_public_legend">Event Publicity</string>
    <string name="event_creation_screen_additional_features">Additional Features</string>
    <string name="event_picture_title">Event Picture</string>
    <string name="event_creation_screen_parking">Parking</string>
    <string name="event_creation_screen_number_parking">Number of parking places</string>
    <string name="event_creation_screen_number_beds">Number of beds</string>
    <string name="event_creation_screen_beds">Beds</string>
    <string name="event_creation_screen_supplies">Supplies</string>
    <string name="event_creation_screen_add_supplies">Add supplies</string>
    <string name="accountEditScreenButton">Edit Account</string>
    <string name="find_event_page_title">Discover Events</string>
    <string name="find_event_search_button_text">Search</string>
    <string name="find_event_event_location_legend">Events Location</string>
    <string name="find_event_event_tags_legend">Add tags to your search</string>
    <string name="find_event_event_location_query_label">Enter an address</string>
    <string name="find_event_event_locate_me_button">Near me</string>
    <string name="find_event_search_radius">Search radius</string>
    <string name="find_event_search_tag_query_label">Enter a tag</string>
    <string name="find_event_date_legend">Date range</string>
    <string name="find_event_join_event_button_text">Join Event</string>
    <string name="find_event_no_event_available">No event details available</string>
    <string name="find_event_near_me_toast">Locating you…</string>
    <string name="find_event_no_result">No result</string>
    <string name="find_event_location_not_selected">No location selected</string>
    <string name="joining_toast">Joining</string>
    <string name="search_location">Search for a location</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="welcome_screen_title">Welcome to</string>
    <string name="continue_as_guest">Continue as Guest</string>
    <string name="login_to_continue">Please login/create an account to continue</string>
    <string name="event_changes_saved">The event\'s changes have been saved</string>
    <string name="my_events_screen_name">My events</string>
    <string name="my_events_screen_created_event_list_name">Created events</string>
    <string name="my_events_screen_joined_event_list_name">Joined events</string>
    <string name="my_events_screen_empty_create_event_list">You have not created any events yet</string>
    <string name="my_events_screen_empty_join_event_list">You have not joined any events yet</string>
    <string name="date_tools_from">From</string>
    <string name="date_tools_until">Until</string>
    <string name="date_tools_at">at</string>
    <string name="close">Close</string>
    <string name="event_details_screen_number_of_guests">guests joined</string>
    <string name="event_details_screen_beds">beds</string>
    <string name="event_details_screen_slots">slots</string>
    <string name="event_details_screen_organiser">Organizer</string>
    <string name="event_details_screen_description">Description</string>
    <string name="event_details_screen_map">Location</string>
    <string name="event_details_screen_weather">Weather forecast</string>
    <string name="event_details_screen_socials">Sharing and Messaging</string>
    <string name="event_details_screen_facilities">Accommodation and Parking</string>
    <string name="event_details_screen_actions">Actions</string>
    <string name="event_details_screen_organized_by">Organized by</string>
    <string name="event_details_screen_leave_button">Leave this Event</string>
    <string name="event_details_screen_report_problem">Report</string>
    <string name="event_details_screen_leave_toast_success">Leaving this event was successful</string>
    <string name="event_details_screen_edit_button">Edit Event</string>
    <string name="event_details_screen_manage_staff_button">Manage staff</string>
    <string name="event_details_screen_location_button">Location</string>
    <string name="event_details_screen_voting_button">Polls &amp; voting</string>
    <string name="event_details_screen_supplies_button">Supplies</string>
    <string name="event_details_screen_leave_failure">Failure to leave the event</string>
    <string name="event_details_screen_delete">Delete</string>
    <string name="event_details_screen_delete_failure">Failure to delete event</string>
    <string name="edit_event">Edit event</string>
    <string name="edit_event_toast_finish">The event has been edited !</string>
    <string name="edit_event_save_failure">Could not save the edited event !</string>
    <string name="telegram_group_invite_link">Telegram group invite link</string>
    <string name="whatsapp_group_invite_link">Whatsapp group invite link</string>
    <string name="discord_group_invite_link">Discord group invite link</string>
    <string name="spotify_playlist_link">Spotify playlist link</string>
    <string name="links_to_social_media">Add your social media groups</string>
    <string name="my_events_screen_past_events_list_name">Past events</string>
    <string name="my_events_screen_empty_past_events_list">There is not past events yet</string>
    <string name="join_event_failiure">Failed to Join the Event</string>
    <string name="join_event_success">Successfully joined the event</string>
    <string name="join_event_staff">Already a Staff Member for this Event</string>
    <string name="join_event_guest">You are already a Guest at this Event</string>
    <string name="join_event_owner">You are the Owner of this Event</string>
    <string name="delete_account">Delete Account</string>

    <string name="find_event_location_set">Location set</string>
    <string name="find_event_location_not_found">Location not found</string>
    <string name="permission_denied">Permission denied</string>
    <string name="find_event_event_locate_searching">Locating…</string>

    <string name="share_event_button">Share</string>
    <string name="calendar_failed">Event can\'t be added to calendar</string>
    <string name="add_event_to_calendar_prefix">Do you want to add the event \"</string>
    <string name="add_event_to_calendar_suffix">\" to your calendar ?</string>
    <string name="manage_staff_screen_title">Manage Staff</string>
    <string name="manage_staff_screen_staff_list_name">Staff List:</string>
    <string name="manage_staff_screen_empty_staff_list">There is no staff for this event</string>
    <string name="manage_staff_screen_guest_list_name">Guest List:</string>
    <string name="manage_staff_screen_empty_guest_list">There are no guests in this event:</string>
    <string name="manage_staff_promote_guest_to_staff_failure">Failure to promote guest</string>
    <string name="manage_staff_demote_staff_to_guest_failure">Failure to demote staff</string>


    <!-- Chimpagne -->
    <string name="chimpagne_cancel">Cancel</string>
    <string name="chimpagne_edit">Edit</string>
    <string name="chimpagne_save">Save</string>
    <string name="chimpagne_confirm">Confirm</string>
    <string name="chimpagne_add">Add</string>
    <string name="chimpagne_delete">Delete</string>
    <string name="chimpagne_you">You</string>
    <string name="chimpagne_ok">OK</string>
    <string name="chimpagne_return">Return</string>

    <!--    Supplies    -->
    <string name="supplies_screen_title">Supplies to bring</string>
    <string name="supplies_dialog_description">Enter the supply details</string>
    <string name="supplies_edit_dialog_title">Edit the supply</string>
    <string name="supplies_add_dialog_title">Add a supply</string>
    <string name="supplies_description">Description</string>
    <string name="supplies_quantity">Quantity</string>
    <string name="supplies_unit">Unit</string>
    <string name="supplies_assign_myself">Assign myself</string>
    <string name="supplies_unassign_myself">Remove myself</string>
    <string name="supplies_supply_not_assigned">Supply not assigned !</string>
    <string name="supplies_supply_assigned_to">Supply already assigned to</string>
    <string name="supplies_not_assigned_to">Supply not assigned to</string>
    <string name="supplies_supply_assigned_to_you">Supplies assigned to you</string>
    <string name="supplies_not_assigned_to_anyone">Supplies not assigned to anyone</string>
    <string name="supplies_already_assigned">Supplies already assigned</string>
    <string name="supplies_empty">No supply created</string>
    <string name="supplies_delete">Delete this supply ?</string>
    <string name="supplies_delete_description">This action is irreversible !</string>
    <string name="supplies_nb_assigned">assigned</string>
    <string name="supplies_create_failure">Failed to create supply</string>
    <string name="supplies_update_failure">Failed to update supply</string>
    <string name="supplies_delete_failure">Failed to delete supply</string>
    <string name="supplies_assign_myself_failure">Failed to assign yourself to supply</string>
    <string name="supplies_unassign_myself_failure">Failed to un-assign yourself to supply</string>

    <!-- DeepLinks -->
    <string name="deep_link_url_event" translatable="false">https://www.manigo.ch/events/?uid=</string>
    <string name="deep_link_url_event_host" translatable="false">www.manigo.ch</string>
    <string name="deep_link_url_event_prefix" translatable="false">/events</string>

    <string name="public_string">Public</string>
    <string name="private_string">Private</string>

    <!-- Account -->
    <string name="account_creation_screen_title">Create your account</string>
    <string name="account_creation_button">Create my account</string>
    <string name="account_creation_failed">Account creation failed</string>
    <string name="account_edit_screen_title">Edit your account</string>
    <string name="account_edit_button">Save changes</string>
    <string name="account_edit_failed">Account edit failed</string>
    <string name="account_first_name_empty">First name cannot be empty !</string>
    <string name="account_last_name_empty">Last name cannot be empty !</string>
    <string name="account_settings_screen_title">Account settings</string>
    <string name="account_first_name">First Name</string>
    <string name="account_last_name">Last Name</string>
    <string name="account_logout">Log out</string>

    <string name="title_should_not_be_empty">The Event Title should not be empty</string>
    <string name="location_should_not_be_empty">The Location should not be empty</string>
    <string name="invalid_dates">Invalid dates</string>
    <string name="invalid_social_media_links">Invalid social media links</string>
    <!-- DateRangeSelector -->
    <string name="select_date_range_for_query">Select a date range for the query</string>


    <string name="event_description_is_empty">No description</string>

    <string name="events_near_you">Events near you</string>
    <string name="turn_gps_on">Turn on your GPS to see events near you</string>
    <string name="activate_gps">ACTIVATE GPS</string>
    <string name="confirm_delete_title">Deleting Account</string>
    <string name="confirm_delete_message">Are you sure you want to delete your account ?</string>
    <string name="account_settings">Account settings</string>

    <!-- Polls and Voting -->
    <string name="polls_topbar_title">Polls and Voting</string>
    <string name="polls_legend_text">Event Polls</string>
    <string name="polls_empty_poll_list">No polls were created for this event</string>
    <string name="polls_create_a_poll_title">Create a Poll</string>
    <string name="polls_create_a_poll_empty_field_toast">Cannot create poll because some fields are empty</string>
    <string name="polls_create_a_poll_title_field">Poll title</string>
    <string name="polls_create_a_poll_query_field">Poll query</string>
    <string name="polls_create_a_poll_option_field">Poll option</string>
    <string name="polls_create_failure">Failed to create a poll</string>
    <string name="polls_vote_failure">Failed to vote on poll</string>
    <string name="polls_delete_failure">Failed to delete poll</string>

    <string name="wind_speed">Wind</string>
    <string name="noforecast_eventtoofarinfuture">Weather forecast available 10 days before the event</string>
    <string name="noforecast_error">Failed to fetch weather data</string>
    <string name="noforecast_alreadyoccured">Event has already occurred, no weather forecast :)</string>

    <!-- Polls and Voting -->
    <string name="navbar_home">Home</string>
    <string name="navbar_discover">Discover</string>
    <string name="narbar_my_events">My Events</string>

</resources>